src/main/java/com/example/userapp/web/rest/errors/UserNotFoundException.java
package com.example.userapp.web.rest.errors;

public class UserNotFoundException extends Exception{
    public UserNotFoundException() {
        super();
    }

    public UserNotFoundException(String message) {
        super(message);
    }

    public UserNotFoundException(String message, Throwable cause) {
        super(message, cause);
    }


}
